# snowexdb

./: .gitignore  README.md  models.py  pyproject.toml
notebooks/: api-examples.ipynb  scratch_space.ipynb
notebooks/data/: fake_data.csv
src/snowexdb/: main.py
src/snowexdb/apis/: main.py
src/snowexdb/models/: __init__.py  base.py  campaign.py  campaign_observation.py  doi.py  instrument.py  layer.py  measurement_type.py  observers.py  point.py  single_location.py  site.py  site_observers.py
src/snowexdb/repositories/: __init__.py  base_repository.py
src/snowexdb/scripts/: cli_app.py  populate_database.py
src/snowexdb/scripts/resources/data/: layers.csv  metadata.csv  overrides_metadata.yaml
src/snowexdb/tests/data/: metadata.csv
src/snowexdb/upload/: upload.py
src/snowexdb/utils/: access_data.py  data_parser.py  overrides.yaml  projection.py
